--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "alloy-reth-provider"
 version = "1.3.7"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+rust-version = "1.85"
+homepage = "https://github.com/cakevm/alloy-reth-provider"
+repository = "https://github.com/cakevm/alloy-reth-provider"
+exclude = [".github/"]
 
 [dependencies]
 parking_lot = { version = "0.12.3", default-features = false }
