--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alloy-reth-provider"
-version = "1.3.8"
+version = "1.3.8-v2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.85"
