--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alloy-reth-provider"
-version = "1.3.12"
+version = "1.3.13-pre"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.85"
@@ -21,36 +21,35 @@ revm-database = { version = "3.0.0", default-features = false }
 revm-state = { version = "3.0.0", default-features = false }
 
 # alloy
-alloy-consensus = { version = "0.14.0", default-features = false }
-alloy-eips = { version = "0.14.0", default-features = false }
-alloy-network = { version = "0.14.0", default-features = false }
+alloy-consensus = { version = "0.15.5", default-features = false }
+alloy-eips = { version = "0.15.5", default-features = false }
+alloy-network = { version = "0.15.5", default-features = false }
 alloy-primitives = { version = "1.0.0", default-features = false }
-alloy-provider = { version = "0.14.0", default-features = false }
-alloy-transport = { version = "0.14.0", default-features = false }
+alloy-provider = { version = "0.15.5", default-features = false }
+alloy-transport = { version = "0.15.5", default-features = false }
 
 # op-alloy
-op-alloy-network = { version = "0.14.1", default-features = false, optional = true }
+op-alloy-network = { version = "0.15.0", default-features = false, optional = true }
 
 # reth
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false, features = [
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false, features = [
-  "alloy-compat",
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false, features = [
   "reth-codec",
 ] }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -61,12 +60,13 @@ reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = 
 optimism = ["op-alloy-network", "reth-optimism-chainspec", "reth-optimism-primitives"]
 
 [dev-dependencies]
-alloy-node-bindings = "0.14.0"
-alloy-provider = { version = "0.14.0", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
+alloy-eips = { version = "0.15.5", default-features = false, features = ["kzg"] }
+alloy-node-bindings = "0.15.5"
+alloy-provider = { version = "0.15.5", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a" }
 ruint = "1.13.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
