--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,35 +21,38 @@ revm-database = { version = "3.0.0", default-features = false }
 revm-state = { version = "3.0.0", default-features = false }
 
 # alloy
-alloy-consensus = { version = "0.15.7", default-features = false }
-alloy-eips = { version = "0.15.7", default-features = false }
-alloy-network = { version = "0.15.7", default-features = false }
+alloy-consensus = { version = "0.15.10", default-features = false }
+alloy-eips = { version = "0.15.10", default-features = false }
+alloy-network = { version = "0.15.10", default-features = false }
 alloy-primitives = { version = "1.0.0", default-features = false }
-alloy-provider = { version = "0.15.7", default-features = false }
-alloy-transport = { version = "0.15.7", default-features = false }
+alloy-provider = { version = "0.15.10", default-features = false }
+alloy-transport = { version = "0.15.10", default-features = false }
 
 # op-alloy
 op-alloy-network = { version = "0.15.1", default-features = false, optional = true }
 
 # reth
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false, features = [
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false, features = [
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
   "reth-codec",
 ] }
+reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f245708", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -60,13 +63,19 @@ reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = 
 optimism = ["op-alloy-network", "reth-optimism-chainspec", "reth-optimism-primitives"]
 
 [dev-dependencies]
-alloy-eips = { version = "0.15.7", default-features = false, features = ["kzg"] }
-alloy-node-bindings = "0.15.7"
-alloy-provider = { version = "0.15.7", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
+alloy-eips = { version = "0.15.10", default-features = false, features = ["kzg"] }
+alloy-node-bindings = "0.15.10"
+alloy-provider = { version = "0.15.10", default-features = false, features = [
+  "alloy-transport-ws",
+  "reqwest",
+  "reqwest-default-tls",
+  "ws",
+] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "f245708" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "f245708" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "f245708" }
-ruint = "1.13.1"
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "4f00ed7" }
+ruint = "1.14.0"
+test-with = { version = "0.14.10", default-features = false }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
