Skip heavy tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
     name: make test
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    env:
+      MAINNET_HTTP: ${{ secrets.MAINNET_HTTP }}
+      SKIP_RPC_HEAVY_TESTS: "true"
     steps:
       - uses: actions/checkout@v4
         with:
