--- a/deny.toml
+++ b/deny.toml
@@ -32,4 +32,4 @@ ignore = [
 multiple-versions = "allow"
 
 [sources]
-allow-git = ["https://github.com/paradigmxyz/reth"]
+allow-git = ["https://github.com/cakevm/reth"]
