--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alloy-reth-provider"
-version = "1.3.13-pre"
+version = "1.4.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.85"
@@ -34,27 +34,27 @@ alloy-transport = { version = "1.0.3", default-features = false }
 op-alloy-network = { version = "0.16.0", default-features = false, optional = true }
 
 # reth
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false, features = [
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false, features = [
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false, features = [
   "reth-codec",
 ] }
-reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false }
+reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -70,9 +70,9 @@ alloy-node-bindings = "1.0.3"
 alloy-provider = { version = "1.0.3", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "52a7a3b" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.1" }
 ruint = "1.14.0"
 test-with = { version = "0.14.10", default-features = false }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
