--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,14 @@ alloy-eips = { version = "1.0.5", default-features = false }
 alloy-network = { version = "1.0.5", default-features = false }
 alloy-primitives = { version = "1.1.2", default-features = false }
 alloy-provider = { version = "1.0.5", default-features = false }
-alloy-rpc-types-eth = { version = "1.0.5", default-features = false }
 alloy-transport = { version = "1.0.5", default-features = false }
+
+# eth-alloy
+alloy-rpc-types-eth = { version = "1.0.5", default-features = false }
 
 # op-alloy
 op-alloy-network = { version = "0.16.0", default-features = false, optional = true }
+op-alloy-rpc-types = { version = "0.16.0", default-features = false, optional = true }
 
 # reth
 reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
@@ -62,7 +65,7 @@ reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = 
 ], optional = true }
 
 [features]
-optimism = ["op-alloy-network", "reth-optimism-chainspec", "reth-optimism-primitives"]
+optimism = ["op-alloy-network", "op-alloy-rpc-types", "reth-optimism-chainspec", "reth-optimism-primitives"]
 
 [dev-dependencies]
 alloy-eips = { version = "1.0.5", default-features = false, features = ["kzg"] }
