--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "alloy-reth-provider"
-version = "1.4.3"
+version = "1.4.3-v2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 rust-version = "1.85"
-homepage = "https://github.com/cakevm/alloy-reth-provider"
-repository = "https://github.com/cakevm/alloy-reth-provider"
+homepage = "https://github.com/paradigmxyz/alloy-reth-provider"
+repository = "https://github.com/paradigmxyz/alloy-reth-provider"
 exclude = [".github/"]
 description = "Implement reth StateProviderFactory traits for remote RPC usage"
 
@@ -16,48 +16,48 @@ tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-th
 tracing = "0.1.41"
 
 # revm
-revm = { version = "23.1.0", default-features = false, features = ["alloydb"] }
-revm-context = { version = "4.0.0", default-features = false }
+revm = { version = "24.0.0", default-features = false, features = ["alloydb"] }
+revm-context = { version = "5.0.0", default-features = false }
 revm-database = { version = "4.0.0", default-features = false }
 revm-state = { version = "4.0.0", default-features = false }
 
 # alloy
-alloy-consensus = { version = "1.0.5", default-features = false }
-alloy-eips = { version = "1.0.5", default-features = false }
-alloy-network = { version = "1.0.5", default-features = false }
+alloy-consensus = { version = "1.0.8", default-features = false }
+alloy-eips = { version = "1.0.8", default-features = false }
+alloy-network = { version = "1.0.8", default-features = false }
 alloy-primitives = { version = "1.1.2", default-features = false }
-alloy-provider = { version = "1.0.5", default-features = false }
-alloy-transport = { version = "1.0.5", default-features = false }
+alloy-provider = { version = "1.0.8", default-features = false }
+alloy-transport = { version = "1.0.8", default-features = false }
 
 # eth-alloy
-alloy-rpc-types-eth = { version = "1.0.5", default-features = false }
+alloy-rpc-types-eth = { version = "1.0.8", default-features = false }
 
 # op-alloy
-op-alloy-network = { version = "0.16.0", default-features = false, optional = true }
-op-alloy-rpc-types = { version = "0.16.0", default-features = false, optional = true }
+op-alloy-network = { version = "0.17.1", default-features = false, optional = true }
+op-alloy-rpc-types = { version = "0.17.1", default-features = false, optional = true }
 
 # reth
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false, features = [
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false, features = [
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false, features = [
   "reth-codec",
 ] }
-reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false }
+reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -68,14 +68,14 @@ reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = 
 optimism = ["op-alloy-network", "op-alloy-rpc-types", "reth-optimism-chainspec", "reth-optimism-primitives"]
 
 [dev-dependencies]
-alloy-eips = { version = "1.0.5", default-features = false, features = ["kzg"] }
-alloy-node-bindings = "1.0.5"
-alloy-provider = { version = "1.0.5", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
+alloy-eips = { version = "1.0.8", default-features = false, features = ["kzg"] }
+alloy-node-bindings = "1.0.8"
+alloy-provider = { version = "1.0.8", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.3" }
-ruint = "1.14.0"
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "a4a9bca" }
+ruint = "1.15.0"
 test-with = { version = "0.14.10", default-features = false }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
