--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ exclude = [".github/"]
 description = "Implement reth StateProviderFactory traits for remote RPC usage"
 
 [dependencies]
+async-trait = "0.1.86"
 eyre = "0.6.12"
 parking_lot = { version = "0.12.3", default-features = false }
 tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
@@ -27,6 +28,7 @@ alloy-eips = { version = "1.0.9", default-features = false }
 alloy-network = { version = "1.0.9", default-features = false }
 alloy-primitives = { version = "1.1.2", default-features = false }
 alloy-provider = { version = "1.0.9", default-features = false }
+alloy-pubsub = { version = "1.0.9", default-features = false }
 alloy-transport = { version = "1.0.9", default-features = false }
 
 # eth-alloy
@@ -37,27 +39,28 @@ op-alloy-network = { version = "0.17.2", default-features = false, optional = tr
 op-alloy-rpc-types = { version = "0.17.2", default-features = false, optional = true }
 
 # reth
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false, features = [
+reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false, features = ["serde"] }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false, features = [
   "serde-bincode-compat",
 ] }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
 
 # ethereum
-reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false, features = [
+reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false, features = [
   "reth-codec",
 ] }
-reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false }
+reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false }
 
 # optimism
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false, optional = true }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7", default-features = false, features = [
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false, optional = true }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83", default-features = false, features = [
   "alloy-compat",
   "reth-codec",
   "serde",
@@ -73,9 +76,9 @@ alloy-node-bindings = "1.0.9"
 alloy-provider = { version = "1.0.9", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7" }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.7" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "0201c83" }
 ruint = "1.15.0"
 test-with = { version = "0.14.10", default-features = false }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
